update 22042024 fixed scrollbar mobile log_in

--- a/assets/src/authentication/log_in/log_in.css
+++ b/assets/src/authentication/log_in/log_in.css
@@ -139,9 +139,6 @@
 }
 
 @media (max-height: 670px) {
-  .container {
-    height: calc(100vh - 248px);
-  }
   .log_in_container {
     height: calc(100vh - 248px);
   }
